# Image-Processor

./: CMakeLists.txt  image_pr.cpp
filters/: filters.cpp  filters.h
image/: color.h  image.cpp  image.h
parsing/: parse.cpp  parse.h
reading_and_writing/: Reader.cpp  Reader.h  Utils.h  Write.cpp  Writer.h
